# opn

./: .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  RELEASE.md  TODO.md  build.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: privileged-tests.yml  release.yml  rust.yml  tag-from-version.yml
Formula/: opn.rb
aur/: PKGBUILD
benches/: platform_bench.rs
docs/: ebpf-dev.md
ebpf/: Cargo.toml
ebpf-common/: Cargo.toml
ebpf-common/src/: lib.rs
ebpf/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: proc_net.rs
man/: opn.1
scripts/: inspect_aya_bindings.sh
src/: agent.rs  cli.rs  container.rs  main.rs  model.rs  net.rs  path_safety.rs  proto_detect.rs  remote.rs  socket_display.rs  watch.rs
src/commands/: ancestry.rs  backend.rs  bandwidth.rs  capture.rs  deleted.rs  diagnose.rs  file.rs  firewall.rs  history.rs  interfaces.rs  kill.rs  logs.rs  mod.rs  netconfig.rs  pid.rs  port.rs  resources.rs  snapshot.rs  snmp.rs  sockets.rs
src/platform/: linux.rs  linux_ebpf.rs  macos.rs  mock.rs  mod.rs
src/render/: json.rs  mod.rs  table.rs  tests.rs  tree.rs
tests/: cli_integration.rs  command_suite_e2e.rs  firewall_privileged_e2e.rs  llm_integration.rs  new_commands_e2e.rs  remote_e2e.rs  schema_compat.rs  smoke_install.sh  watch_tty_manual.rs
