[package]
name = "open-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
netstat2 = "0.9"

[dependencies.crossterm]
version = "0.29"
optional = true

[dependencies.ratatui]
version = "0.29"
optional = true

[features]
default = ["watch"]
watch = ["dep:crossterm", "dep:ratatui"]
