[package]
name = "open-tool"
version = "0.3.1"
edition = "2021"

[workspace]
members = [".", "ebpf", "ebpf-common"]
default-members = ["."]

[[bin]]
name = "opn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
libc = "0.2"
dns-lookup = "0.1"
pcap = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
netstat2 = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
bytes = { version = "1", optional = true }
opn-ebpf-common = { path = "ebpf-common", optional = true }

[dependencies.crossterm]
version = "0.29"
optional = true

[dependencies.ratatui]
version = "0.29"
optional = true

[features]
default = ["watch"]
watch = ["dep:crossterm", "dep:ratatui"]
ebpf = ["dep:aya", "dep:aya-log", "dep:bytes", "dep:opn-ebpf-common"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "platform_bench"
harness = false
